--- a/Atividades/Aulas_traduzidas/index - Copy (3).html
+++ b/Atividades/Aulas_traduzidas/index - Copy (3).html
@@ -68,7 +68,11 @@
       letter-spacing: .5px;
     }
 
-    .button-row { display: none; } /* removidos os botões do topo */
+    .button-row {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
 
     .btn {
       background-color: #fff;
@@ -146,16 +150,7 @@
     .control-row { display: flex; gap: 8px; flex-wrap: wrap; }
     .tiny { font-size: .82rem; color: #666; }
 
-    .btn:focus { outline: 2px solid #1111; outline-offset: 2px; }
-
-    /* Estilo visual para o botão mute ativo */
-    .btn-muted {
-      background-color: #ffe8e8;
-      border-color: #ffc9c9;
-      color: #c62828;
-    }
-
-    /* ====== MOBILE (painel do robô fixo no topo) ====== */
+    /* ====== MOBILE (MODO 7) ====== */
     @media (max-width: 768px) {
       .layout { display: block; padding: 0; }
 
@@ -178,13 +173,15 @@
         flex-direction: column;
       }
       .content-header { border-radius: 0; padding: 10px 12px; }
-
-      /* Altura e offset do painel são calculados via JS para não cobrir o topo do texto */
       .content-wrapper {
         padding: 14px;
-        /* margin-top e height serão definidos dinamicamente por JS */
+        height: calc(100vh - 280px - 48px);
+        margin-top: calc(280px);
+        overflow-y: auto;
       }
     }
+
+    .btn:focus { outline: 2px solid #1111; outline-offset: 2px; }
   </style>
 </head>
 <body>
@@ -193,7 +190,22 @@
     <section class="content-shell">
       <div class="content-header">
         <h1>GRAMMAR</h1>
-        <div class="button-row"><!-- removida --></div>
+        <div class="button-row">
+          <button class="btn btn-outline" onclick="history.back()" aria-label="Voltar">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
+              <path fill-rule="evenodd" d="M15 8a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708.708L2.707 7.5H14.5A.5.5 0 0 1 15 8z"/>
+            </svg>
+            Back
+          </button>
+
+          <button id="toggleButton" class="btn" onclick="toggleLesson()" aria-label="Iniciar ou pausar a lição">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 viewBox="0 0 16 16" aria-hidden="true">
+              <path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442l6.363 3.692a.5.5 0 0 1 0 .884z"/>
+            </svg>
+            Start Lesson
+          </button>
+        </div>
       </div>
 
       <div class="content-wrapper" id="contentWrapper">
@@ -202,7 +214,7 @@
     </section>
 
     <!-- COLUNA DIREITA -->
-    <aside class="teacher-panel" aria-label="Professor Robô" id="teacherPanel">
+    <aside class="teacher-panel" aria-label="Professor Robô">
       <div class="teacher-header">
         <div class="teacher-title">
           <span style="display:inline-flex;width:10px;height:10px;background:var(--brand);border-radius:50%;"></span>
@@ -223,7 +235,6 @@
       </div>
 
       <div class="control-row">
-        <!-- Iniciar/Pausar -->
         <button class="btn" onclick="toggleLesson()" aria-label="Iniciar ou pausar a lição (painel)">
           <span id="panelPlayIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
@@ -232,26 +243,11 @@
           </span>
           <span id="panelPlayLabel">Start Lesson</span>
         </button>
-
-        <!-- Mute/Unmute -->
-        <button class="btn" id="muteBtn" onclick="toggleMute()" aria-label="Silenciar/Ativar som">
-          <span id="muteIcon">
-            <!-- speaker-on -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
-              <path d="M11.536 14.01a.75.75 0 0 1-1.06-1.06A5.5 5.5 0 0 0 10.5 3.05a.75.75 0 1 1 1.06-1.06 7 7 0 0 1-.024 12.02z"/>
-              <path d="M8.717 3.55A.75.75 0 0 1 9 4.19v7.62a.75.75 0 0 1-1.204.6L5.5 10.75H3A1.5 1.5 0 0 1 1.5 9.25v-2.5A1.5 1.5 0 0 1 3 5.25h2.5l2.296-1.66a.75.75 0 0 1 .921-.04z"/>
-            </svg>
-          </span>
-          <span id="muteLabel">Mute</span>
-        </button>
-
-        <!-- Sair -->
-        <button class="btn btn-outline" id="exitBtn" onclick="exitLesson()" aria-label="Sair">
+        <button class="btn btn-outline" onclick="replayCurrent()" aria-label="Repetir trecho atual">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
-            <path d="M6 2a1 1 0 0 0-1 1v2h2V4h6v8H7v-1H5v2a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6z"/>
-            <path d="M.146 8.354a.5.5 0 0 1 0-.708L3.793 3.999 4.5 4.706 1.707 7.5H10v1H1.707L4.5 11.293l-.707.707L.146 8.354z"/>
+            <path d="M8 3a5 5 0 1 1-4.546 2.916.5.5 0 1 1 .894-.448A4 4 0 1 0 8 4V1l3 3-3 3V3z"/>
           </svg>
-          <span id="exitLabel">Sair</span>
+          <span id="repeatLabel">Repeat</span>
         </button>
       </div>
 
@@ -270,8 +266,6 @@
       static: '../../../../../imagens/robo1_static.png',
       idle:  '../../../../../imagens/robo2.gif'
     };
-    const IDLE_DELAY_MS = 10000; // <<< 10 segundos para entrar em idle
-
     let robotState = 'static';
     let idleTimer;
     let speakToken = 0; // protege contra callbacks antigos
@@ -290,7 +284,7 @@
       if (robot) robot.src = ROBOT[state];
     }
 
-    function goIdleSoon(ms = IDLE_DELAY_MS){
+    function goIdleSoon(ms = 10000){
       clearTimeout(idleTimer);
       idleTimer = setTimeout(() => {
         if (!speechSynthesis.speaking && !isPlaying){
@@ -311,10 +305,7 @@
         pause: 'Pause Lesson',
         repeat: 'Repeat',
         hint: 'Hint: tap any line to play from that point.',
-        badge: (studentLang) => studentLang ? `en-US / ${studentLang}` : 'en-US',
-        mute: 'Mute',
-        unmute: 'Unmute',
-        exit: 'Exit',
+        badge: (studentLang) => studentLang ? `en-US / ${studentLang}` : 'en-US'
       },
       'pt-BR': {
         ready: 'Pronto para iniciar',
@@ -323,10 +314,7 @@
         pause: 'Pausar aula',
         repeat: 'Repetir',
         hint: 'Dica: toque em qualquer linha do texto para ouvir a partir daquele ponto.',
-        badge: (studentLang) => `en-US / pt-BR`,
-        mute: 'Silenciar',
-        unmute: 'Ativar som',
-        exit: 'Sair',
+        badge: (studentLang) => `en-US / pt-BR`
       },
       'th': {
         ready: 'พร้อมเริ่ม',
@@ -335,10 +323,7 @@
         pause: 'หยุดชั่วคราว',
         repeat: 'เล่นซ้ำ',
         hint: 'เคล็ดลับ: แตะบรรทัดใดก็ได้เพื่อเริ่มเล่นจากส่วนนั้น',
-        badge: (studentLang) => `en-US / th`,
-        mute: 'ปิดเสียง',
-        unmute: 'เปิดเสียง',
-        exit: 'ออก',
+        badge: (studentLang) => `en-US / th`
       },
       'my': {
         ready: 'စတင်ရန်အဆင်သင့်',
@@ -347,10 +332,7 @@
         pause: 'ခဏရပ်မည်',
         repeat: 'ထပ်မံဖတ်ပြ',
         hint: 'အကြံပြုချက် - မည်သည့် စာကြောင်းမဆို ကိုထိနှိပ်ပြီး ထိုနေရာမှ စတင်နားထောင်နိုင်သည်',
-        badge: (studentLang) => `en-US / my`,
-        mute: 'အသံပိတ်',
-        unmute: 'အသံဖွင့်',
-        exit: 'ထွက်မည်',
+        badge: (studentLang) => `en-US / my`
       }
     };
 
@@ -362,10 +344,7 @@
       pause: 'ផ្អាក',
       repeat: 'ធ្វើម្ដងទៀត',
       hint: 'គន្លឹះ៖ ចុចលើបន្ទាត់ណាមួយ ដើម្បីចាប់ផ្តើមពីចំណុចនោះ។',
-      badge: (studentLang) => `en-US / km`,
-      mute: 'បិទសំឡេង',
-      unmute: 'បើកសំឡេង',
-      exit: 'ចាកចេញ',
+      badge: (studentLang) => `en-US / km`
     };
 
     // Simplified Chinese
@@ -376,10 +355,7 @@
       pause: '暂停课程',
       repeat: '再听一遍',
       hint: '提示：点击任意一行，从该处开始播放。',
-      badge: (studentLang) => `en-US / zh-CN`,
-      mute: '静音',
-      unmute: '取消静音',
-      exit: '退出',
+      badge: (studentLang) => `en-US / zh-CN`
     };
 
     function t(key) {
@@ -400,7 +376,6 @@
     let currentIndex = 0;
     let pauseTimeout;
     let studentLang = 'en-US'; // detectaremos a seguir
-    let isMuted = false;       // <<< novo: controle de mute
 
     /* =========================================================
        Detecção de língua do aluno
@@ -433,16 +408,16 @@
     }
 
     /* =========================================================
-       Aplicar traduções na UI
+       Aplicar traduções na UI fixa
        ========================================================= */
     function applyUITranslations() {
-      const langBadge   = document.getElementById('langBadge');
-      const status      = document.getElementById('statusBadge');
-      const mainBtn     = document.getElementById('toggleButton'); // inexistente: mantemos update via painel
-      const panelIcon   = document.getElementById('panelPlayIcon');
-      const panelLabel  = document.getElementById('panelPlayLabel');
-      const repeatLabel = document.getElementById('repeatLabel');  // não existe mais fora; mantemos compat
-      const hintText    = document.getElementById('hintText');
+      const langBadge = document.getElementById('langBadge');
+      const status = document.getElementById('statusBadge');
+      const mainBtn = document.getElementById('toggleButton');
+      const panelIcon = document.getElementById('panelPlayIcon');
+      const panelLabel = document.getElementById('panelPlayLabel');
+      const repeatLabel = document.getElementById('repeatLabel');
+      const hintText = document.getElementById('hintText');
 
       // badge
       langBadge.textContent = (studentLang === 'en-US') ? 'en-US' : `en-US / ${studentLang}`;
@@ -454,22 +429,16 @@
         ${t('ready')}
       `;
 
-      // rótulos painel
+      // rótulos
       const svgPlay = `
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
              viewBox="0 0 16 16" aria-hidden="true" fill="currentColor">
           <path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442l6.363 3.692a.5.5 0 0 1 0 .884z"/>
         </svg>`;
+      mainBtn.innerHTML = `${svgPlay} ${t('start')}`;
       panelIcon.innerHTML = svgPlay;
       panelLabel.textContent = t('start');
-
-      // mute label
-      updateMuteUI();
-
-      // exit label
-      document.getElementById('exitLabel').textContent = t('exit');
-
-      // hint
+      repeatLabel.textContent = t('repeat');
       hintText.textContent = t('hint');
     }
 
@@ -492,9 +461,6 @@
 
         // Processar e montar elementos
         processTextFile(data);
-
-        // Ajustar layout mobile para não cobrir o topo
-        adjustMobileOverlap();
       } catch (e) {
         alert('Erro ao carregar a lição.');
         console.error(e);
@@ -611,49 +577,16 @@
       else pauseLesson();
     }
 
-    function exitLesson() {
-      history.back();
-    }
-
-    function toggleMute() {
-      isMuted = !isMuted;
-      updateMuteUI();
-    }
-
-    function updateMuteUI() {
-      const muteBtn   = document.getElementById('muteBtn');
-      const muteIcon  = document.getElementById('muteIcon');
-      const muteLabel = document.getElementById('muteLabel');
-      if (isMuted) {
-        muteBtn.classList.add('btn-muted');
-        muteLabel.textContent = t('unmute');
-        muteIcon.innerHTML = `
-          <!-- speaker-off -->
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
-            <path d="M9 4.19v7.62a.75.75 0 0 1-1.204.6L5.5 10.75H3A1.5 1.5 0 0 1 1.5 9.25v-2.5A1.5 1.5 0 0 1 3 5.25h2.5l2.296-1.66A.75.75 0 0 1 9 4.19z"/>
-            <path d="M10.354 5.646 12.707 8l-2.353 2.354-.708-.708L11.293 8l-1.647-1.646.708-.708z"/>
-          </svg>`;
-      } else {
-        muteBtn.classList.remove('btn-muted');
-        muteLabel.textContent = t('mute');
-        muteIcon.innerHTML = `
-          <!-- speaker-on -->
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
-            <path d="M11.536 14.01a.75.75 0 0 1-1.06-1.06A5.5 5.5 0 0 0 10.5 3.05a.75.75 0 1 1 1.06-1.06 7 7 0 0 1-.024 12.02z"/>
-            <path d="M8.717 3.55A.75.75 0 0 1 9 4.19v7.62a.75.75 0 0 1-1.204.6L5.5 10.75H3A1.5 1.5 0 0 1 1.5 9.25v-2.5A1.5 1.5 0 0 1 3 5.25h2.5l2.296-1.66a.75.75 0 0 1 .921-.04z"/>
-          </svg>`;
-      }
-    }
-
     function updateControls() {
-      const panelIcon  = document.getElementById('panelPlayIcon');
+      const mainBtn = document.getElementById('toggleButton');
+      const panelIcon = document.getElementById('panelPlayIcon');
       const panelLabel = document.getElementById('panelPlayLabel');
-      const status     = document.getElementById('statusBadge');
+      const status = document.getElementById('statusBadge');
 
       const svgPlay = `
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
              viewBox="0 0 16 16" aria-hidden="true" fill="currentColor">
-          <path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442ল6.363 3.692a.5.5 0 0 1 0 .884z"/>
+          <path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442l6.363 3.692a.5.5 0 0 1 0 .884z"/>
         </svg>`;
       const svgPause = `
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -662,6 +595,7 @@
         </svg>`;
 
       if (isPlaying) {
+        mainBtn.innerHTML = `${svgPause} ${t('pause')}`;
         panelIcon.innerHTML = svgPause;
         panelLabel.textContent = t('pause');
         status.innerHTML = `
@@ -670,6 +604,7 @@
           ${t('explaining')}
         `;
       } else {
+        mainBtn.innerHTML = `${svgPlay} ${t('start')}`;
         panelIcon.innerHTML = svgPlay;
         panelLabel.textContent = t('start');
         status.innerHTML = `
@@ -727,7 +662,6 @@
           const u = new SpeechSynthesisUtterance(s.textContent);
           const cellLang = s.getAttribute('lang');
           if (cellLang) u.lang = cellLang;
-          u.volume = isMuted ? 0 : 1; // <<< respeita mute
 
           u.onend = () => {
             if (myToken !== speakToken) return;
@@ -750,7 +684,7 @@
       } else {
         const u = new SpeechSynthesisUtterance(entry.text);
         if (entry.lang) u.lang = entry.lang;
-        u.volume = isMuted ? 0 : 1; // <<< respeita mute
+
         u.onend = finish;
 
         speechSynthesis.cancel();
@@ -765,7 +699,7 @@
 
       setRobot('static');
       clearTimeout(idleTimer);
-      goIdleSoon(IDLE_DELAY_MS);
+      goIdleSoon(10000);
     }
 
     /* =========================================================
@@ -774,29 +708,6 @@
     document.addEventListener('visibilitychange', () => {
       if (document.hidden && isPlaying) toggleLesson();
     });
-
-    /* =========================================================
-       Ajuste MOBILE: evitar o painel cobrindo o texto
-       ========================================================= */
-    function adjustMobileOverlap() {
-      const isMobile = window.matchMedia('(max-width: 768px)').matches;
-      const panel = document.getElementById('teacherPanel');
-      const wrapper = document.getElementById('contentWrapper');
-      if (!wrapper) return;
-
-      if (isMobile && panel) {
-        const ph = panel.getBoundingClientRect().height;
-        // define um topo equivalente à altura do painel
-        wrapper.style.marginTop = ph + 'px';
-        // tenta reservar espaço vertical adequado
-        // 48px ~ altura da barra "GRAMMAR"
-        wrapper.style.height = `calc(100vh - ${ph}px - 48px)`;
-      } else {
-        wrapper.style.marginTop = '';
-        wrapper.style.height = '';
-      }
-    }
-    window.addEventListener('resize', adjustMobileOverlap);
 
     /* =========================================================
        Boot
