--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -84,10 +84,12 @@
       transition: all .15s ease;
     }
     .btn:hover { filter: brightness(0.95); }
+
+    /* >>> Deixa o outline visível em QUALQUER fundo */
     .btn-outline {
       background: transparent;
-      color: #fff;
-      border-color: #fff;
+      color: var(--brand) !important;
+      border-color: var(--brand) !important;
     }
 
     .content-wrapper {
@@ -148,14 +150,14 @@
 
     .btn:focus { outline: 2px solid #1111; outline-offset: 2px; }
 
-    /* Estilo visual para o botão mute ativo */
+    /* Visual do botão mute quando ativo */
     .btn-muted {
       background-color: #ffe8e8;
-      border-color: #ffc9c9;
-      color: #c62828;
+      border-color: #ffc9c9 !important;
+      color: #c62828 !important;
     }
 
-    /* ====== MOBILE (painel do robô fixo no topo) ====== */
+    /* ====== MOBILE ====== */
     @media (max-width: 768px) {
       .layout { display: block; padding: 0; }
 
@@ -179,10 +181,9 @@
       }
       .content-header { border-radius: 0; padding: 10px 12px; }
 
-      /* Altura e offset do painel são calculados via JS para não cobrir o topo do texto */
+      /* Offset do painel é calculado por JS para não cobrir o topo do texto */
       .content-wrapper {
         padding: 14px;
-        /* margin-top e height serão definidos dinamicamente por JS */
       }
     }
   </style>
@@ -208,7 +209,7 @@
           <span style="display:inline-flex;width:10px;height:10px;background:var(--brand);border-radius:50%;"></span>
           <h2>Professor Samuel</h2>
         </div>
-        <!-- Botão SAIR deslocado para o cabeçalho (substitui o badge de idiomas) -->
+        <!-- Botão SAIR visível sempre (substitui o badge de idiomas) -->
         <button class="btn btn-outline" id="exitBtn" onclick="exitLesson()" aria-label="Sair">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
             <path d="M6 2a1 1 0 0 0-1 1v2h2V4h6v8H7v-1H5v2a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6z"/>
@@ -246,7 +247,7 @@
             <!-- speaker-on -->
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
               <path d="M11.536 14.01a.75.75 0 0 1-1.06-1.06A5.5 5.5 0 0 0 10.5 3.05a.75.75 0 1 1 1.06-1.06 7 7 0 0 1-.024 12.02z"/>
-              <path d="M8.717 3.55A.75.75 0 0 1 9 4.19v7.62a.75.75 0 0 1-1.204.6L5.5 10.75H3A1.5 1.5 0 0 1 1.5 9.25v-2.5A1.5 1.5 0 0 1 3 5.25h2.5l2.296-1.66a.75.75 0 0 1 .921-.04z"/>
+              <path d="M8.717 3.55A.75.75 0 0 1 9 4.19v7.62a.75.75 0 0 1-1.204.6L5.5 10.75H3A1.5 1.5 0 0 1 1.5 9.25v-2.5A1.5 1.5 0 0 1 3 5.25h2.5ল2.296-1.66a.75.75 0 0 1 .921-.04z"/>
             </svg>
           </span>
           <span id="muteLabel">Mute</span>
@@ -309,7 +310,6 @@
         pause: 'Pause Lesson',
         repeat: 'Repeat',
         hint: 'Hint: tap any line to play from that point.',
-        badge: (studentLang) => studentLang ? `en-US / ${studentLang}` : 'en-US',
         mute: 'Mute',
         unmute: 'Unmute',
         exit: 'Exit',
@@ -321,7 +321,6 @@
         pause: 'Pausar aula',
         repeat: 'Repetir',
         hint: 'Dica: toque em qualquer linha do texto para ouvir a partir daquele ponto.',
-        badge: (studentLang) => `en-US / pt-BR`,
         mute: 'Silenciar',
         unmute: 'Ativar som',
         exit: 'Sair',
@@ -333,7 +332,6 @@
         pause: 'หยุดชั่วคราว',
         repeat: 'เล่นซ้ำ',
         hint: 'เคล็ดลับ: แตะบรรทัดใดก็ได้เพื่อเริ่มเล่นจากส่วนนั้น',
-        badge: (studentLang) => `en-US / th`,
         mute: 'ปิดเสียง',
         unmute: 'เปิดเสียง',
         exit: 'ออก',
@@ -345,44 +343,37 @@
         pause: 'ခဏရပ်မည်',
         repeat: 'ထပ်မံဖတ်ပြ',
         hint: 'အကြံပြုချက် - မည်သည့် စာကြောင်းမဆို ကိုထိနှိပ်ပြီး ထိုနေရာမှ စတင်နားထောင်နိုင်သည်',
-        badge: (studentLang) => `en-US / my`,
         mute: 'အသံပိတ်',
         unmute: 'အသံဖွင့်',
         exit: 'ထွက်မည်',
-      }
-    };
-
-    // Khmer
-    T['km'] = {
-      ready: 'រួចរាល់ដើម្បីចាប់ផ្តើម',
-      explaining: 'សាំយូអែលកំពុងអធិប្បាយ',
-      start: 'ចាប់ផ្តើមមេរៀន',
-      pause: 'ផ្អាក',
-      repeat: 'ធ្វើម្ដងទៀត',
-      hint: 'គន្លឹះ៖ ចុចលើបន្ទាត់ណាពីចំណុចនោះ។',
-      badge: (studentLang) => `en-US / km`,
-      mute: 'បិទសំឡេង',
-      unmute: 'បើកសំឡេង',
-      exit: 'ចាកចេញ',
-    };
-
-    // Simplified Chinese
-    T['zh-CN'] = {
-      ready: '准备开始',
-      explaining: 'Samuel 正在讲解',
-      start: '开始课程',
-      pause: '暂停课程',
-      repeat: '再听一遍',
-      hint: '提示：点击任意一行，从该处开始播放。',
-      badge: (studentLang) => `en-US / zh-CN`,
-      mute: '静音',
-      unmute: '取消静音',
-      exit: '退出',
+      },
+      'km': {
+        ready: 'រួចរាល់ដើម្បីចាប់ផ្តើម',
+        explaining: 'សាំយូអែលកំពុងអធិប្បាយ',
+        start: 'ចាប់ផ្តើមមេរៀន',
+        pause: 'ផ្អាក',
+        repeat: 'ធ្វើម្ដងទៀត',
+        hint: 'គន្លឹះ៖ ចុចលើបន្ទាត់ណាមួយ ដើម្បីចាប់ផ្តើមពីចំណុចនោះ។',
+        mute: 'បិទសំឡេង',
+        unmute: 'បើកសំឡេង',
+        exit: 'ចាកចេញ',
+      },
+      'zh-CN': {
+        ready: '准备开始',
+        explaining: 'Samuel 正在讲解',
+        start: '开始课程',
+        pause: '暂停课程',
+        repeat: '再听一遍',
+        hint: '提示：点击任意一行，从该处开始播放。',
+        mute: '静音',
+        unmute: '取消静音',
+        exit: '退出',
+      },
     };
 
     function t(key) {
-      const pack = T[studentLang] || T['en-US'];
-      return (pack && pack[key]) || T['en-US'][key] || key;
+      const pack = T[studentLang] || T['pt-BR'];
+      return (pack && pack[key]) || T['pt-BR'][key] || key;
     }
 
     /* =========================================================
@@ -397,7 +388,7 @@
     let isPlaying = false;
     let currentIndex = 0;
     let pauseTimeout;
-    let studentLang = 'en-US'; // detectaremos a seguir
+    let studentLang = 'pt-BR'; // padrão PT-BR se nada detectado
     let isMuted = false;       // controle de mute
 
     /* =========================================================
@@ -427,7 +418,7 @@
         }
       }
       // 3) fallback
-      return 'en-US';
+      return 'pt-BR';
     }
 
     /* =========================================================
@@ -456,11 +447,9 @@
       panelIcon.innerHTML = svgPlay;
       panelLabel.textContent = t('start');
 
-      // mute label
+      // mute + exit + hint
       document.getElementById('exitLabel').textContent = t('exit');
       muteLabel.textContent = t('mute');
-
-      // hint
       hintText.textContent = t('hint');
     }
 
@@ -607,10 +596,20 @@
     }
 
     function toggleMute() {
-      // cancela fala atual e alterna flag
-      speechSynthesis.cancel();
+      // alterna flag e atualiza UI
       isMuted = !isMuted;
       updateMuteUI();
+
+      // Se estiver falando, reinicia a MESMA linha no novo estado (silencioso/sonoro)
+      if (speechSynthesis.speaking) {
+        const tokenBefore = ++speakToken; // invalida callbacks antigos
+        speechSynthesis.cancel();
+        setRobot('static');
+        setTimeout(() => {
+          if (tokenBefore !== speakToken) return;
+          if (isPlaying) speakEntry(currentIndex);
+        }, 50);
+      }
     }
 
     function updateMuteUI() {
@@ -667,38 +666,16 @@
         panelLabel.textContent = t('start');
         status.innerHTML = `
           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-               viewBox="0 0 24 24" aria-hidden="true"><path d="M3 9h2v6H3V9zm4-4h2v14H7V5zm4 2h2v10h-2V7zm4-4h2v18h-2V3zm4 8h2v2h-2v-2z"/></svg>
+               viewBox="0 0 24 24" aria-hidden="true"><path d="M3 9h2v6Հ3V9zm4-4h2v14H7V5zm4 2h2v10h-2V7zm4-4h2v18h-2V3zm4 8h2v2h-2v-2z"/></svg>
           ${t('ready')}
         `;
       }
     }
 
     /* =========================================================
-       Falar (TTS real) vs Simular fala (mute) — mantém cadência
+       Leitura com micro-pausa entre linhas/células
        ========================================================= */
     const GAP_BETWEEN_LINES_MS = 300; // fração de segundo entre falas
-
-    function estimateDurationMs(text) {
-      const words = (text.trim().match(/\S+/g) || []).length;
-      // ~450 ms por palavra, com limites para frases curtas/longas
-      return Math.max(600, Math.min(6000, words * 450));
-    }
-
-    function speakChunk(text, lang, onend) {
-      if (isMuted) {
-        // Simula fala: mantém animação/ritmo, mas sem som
-        setRobot('talk');
-        const ms = estimateDurationMs(text);
-        setTimeout(() => { onend && onend(); }, ms);
-        return;
-      }
-      const u = new SpeechSynthesisUtterance(text);
-      if (lang) u.lang = lang;
-      u.volume = 1; // som normal quando não muted
-      u.onend = () => { onend && onend(); };
-      speechSynthesis.cancel();
-      speechSynthesis.speak(u);
-    }
 
     function speakEntry(i) {
       if (i >= texts.length) return pauseLesson();
@@ -738,9 +715,12 @@
 
           const s = spans[c];
           s.classList.add('highlight');
+          const u = new SpeechSynthesisUtterance(s.textContent);
           const cellLang = s.getAttribute('lang');
+          if (cellLang) u.lang = cellLang;
+          u.volume = isMuted ? 0 : 1;
 
-          speakChunk(s.textContent, cellLang, () => {
+          u.onend = () => {
             if (myToken !== speakToken) return;
             s.classList.remove('highlight');
             setRobot('static');
@@ -752,11 +732,20 @@
               speechSynthesis.cancel();
               speakCell();
             }, GAP_BETWEEN_LINES_MS);
-          });
+          };
+
+          speechSynthesis.cancel();
+          speechSynthesis.speak(u);
         }
         speakCell();
       } else {
-        speakChunk(entry.text, entry.lang, finish);
+        const u = new SpeechSynthesisUtterance(entry.text);
+        if (entry.lang) u.lang = entry.lang;
+        u.volume = isMuted ? 0 : 1;
+        u.onend = finish;
+
+        speechSynthesis.cancel();
+        speechSynthesis.speak(u);
       }
     }
 
@@ -788,10 +777,8 @@
 
       if (isMobile && panel) {
         const ph = panel.getBoundingClientRect().height;
-        // define um topo equivalente à altura do painel
-        wrapper.style.marginTop = ph + 'px';
-        // 48px ~ altura aproximada da barra "GRAMMAR"
-        wrapper.style.height = `calc(100vh - ${ph}px - 48px)`;
+        wrapper.style.marginTop = ph + 'px';                 // desloca o conteúdo
+        wrapper.style.height = `calc(100vh - ${ph}px - 48px)`; // 48px ~ barra GRAMMAR
       } else {
         wrapper.style.marginTop = '';
         wrapper.style.height = '';
@@ -805,6 +792,7 @@
     window.onload = () => {
       // “Acorda” a engine de voz em alguns navegadores
       speechSynthesis.getVoices();
+      // Detecta idioma a partir do arquivo (depois de carregado) — default PT-BR por enquanto
       applyUITranslations();
       updateControls();
       loadTextFile();
