--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -296,7 +296,7 @@
       if (!item) return null;
       // construir URL local pelo hash
       if (item.hash) {
-        const localUrl = `${audioBase}/${item.lang}/${item.hash}.mp3`;
+        const localUrl = `${audioBase}/${item.lang}-${item.hash}.mp3`;
         return { url: localUrl, lang: item.lang, hash: item.hash, fallbackUrl: item.url || '' };
       }
       // sem hash, tenta usar item.url (se for relativo a /sounds/…, vai falhar localmente; ainda assim devolvemos)
