--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -295,12 +295,21 @@
       }
       if (!item) return null;
       // construir URL local pelo hash
-      if (item.hash) {
-        const localUrl = `${audioBase}/${item.lang}-${item.hash}.mp3`;
-        return { url: localUrl, lang: item.lang, hash: item.hash, fallbackUrl: item.url || '' };
-      }
-      // sem hash, tenta usar item.url (se for relativo a /sounds/…, vai falhar localmente; ainda assim devolvemos)
-      return { url: item.url || '', lang: item.lang, hash: null, fallbackUrl: '' };
+      // construir URL local a partir do manifest
+if (item.file) {
+  // Manifesto novo: já traz o nome exato (ex.: "pt-br-....mp3")
+  const localUrl = `${audioBase}/${item.file}`;
+  return { url: localUrl, lang: item.lang, hash: null, fallbackUrl: '' };
+}
+
+if (item.hash) {
+  // Compatibilidade com manifestos antigos (se algum ainda vier com "hash")
+  const localUrl = `${audioBase}/${(item.lang || '').toLowerCase()}-${item.hash}.mp3`;
+  return { url: localUrl, lang: item.lang, hash: item.hash, fallbackUrl: item.url || '' };
+}
+
+// Último recurso: usar URL externa, se existir
+return { url: item.url || '', lang: item.lang, hash: null, fallbackUrl: '' };
     }
 
     /* =========================================================
