--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -214,7 +214,7 @@
        AVATARES (Samuel + Hannah)
        ========================================================= */
     const ROBOT = {
-      talk:  '../../../../../imagens/robo1.gif',
+      talk:  '../../../../../imagens/robo1copy.gif',
       static: '../../../../../imagens/robo1_static.png',
       idle:  '../../../../../imagens/robo2.gif'
     };
