--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -178,14 +178,14 @@
         // Images
         const ROBOT_GIF = "../../imagens/robo1.gif";
         const ROBOT_STATIC = "../../imagens/robo1_static.png";
-        const ROBOT_ALTERNATE = "../../imagens/robo2.gif";
+        const ROBOT_ALTERNATE = "../../imagens/robot_dance.gif";
 
         // ===== [NOVO] Módulo de ociosidade / idle =====
-        const IDLE_DELAY_MS = 15000; // 15s sem atividade -> alterna para robo2.gif
+        const IDLE_DELAY_MS = 15000; // 15s sem atividade -> alterna para robot_dance.gif
         let idleTimer = null;
 
         // Pré-carregar imagens para evitar flicker
-        ['../../imagens/robo1_static.png', '../../imagens/robo1.gif', '../../imagens/robo2.gif']
+        ['../../imagens/robo1_static.png', '../../imagens/robo1.gif', '../../imagens/robot_dance.gif']
           .forEach(src => { const img = new Image(); img.src = src; });
 
         function setRobotImage(src) {
